--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,193 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="12"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Our Team"
+        android:textSize="25sp"
+        android:textColor="#000"
+        android:paddingTop="5dp"
+        android:paddingBottom="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/sasuke"
+        app:cardCornerRadius="40dp"
+        >
+        <ImageView
+            android:id="@+id/imagenaruto"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/naruto" />
+
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/txtsasuke"
+        android:text="Naruto"
+        android:textSize="20sp"
+        android:textColor="#000"
+        android:id="@+id/txtnaruto"
+        />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/sasuke"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintLeft_toRightOf="@+id/cardView"
+        app:layout_constraintRight_toRightOf="@+id/sakura"
+        app:cardCornerRadius="40dp">
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/sasuke"
+            android:id="@+id/imagesasuke"/>
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/txtsasuke"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sasuke"
+        android:textColor="#000"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/sasuke"
+        app:layout_constraintLeft_toRightOf="@+id/txtnaruto"
+        app:layout_constraintRight_toLeftOf="@+id/txtsakura"
+        />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/sakura"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintLeft_toRightOf="@+id/sasuke"
+        app:cardCornerRadius="40dp">
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/sakura"
+            android:id="@+id/imagesakura"
+            />
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/txtsakura"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sakura"
+        app:layout_constraintLeft_toRightOf="@+id/txtsasuke"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sakura"
+        android:textColor="#000"
+        android:textSize="20sp"
+        />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/boruto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtnaruto"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/mitsuki">
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/boruto"
+            />
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/txtboruto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Boruto"
+        android:textSize="20sp"
+        android:textColor="#000"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/txtmitsuki"
+        app:layout_constraintTop_toBottomOf="@+id/boruto"
+        />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/mitsuki"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtsasuke"
+        app:layout_constraintLeft_toRightOf="@+id/boruto"
+        app:layout_constraintRight_toLeftOf="@+id/sarada"
+        >
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/mitsuki"
+        />
+</androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/txtmitsuki"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mitsuki"
+        android:textSize="20sp"
+        android:textColor="#000"
+        app:layout_constraintTop_toBottomOf="@id/mitsuki"
+        app:layout_constraintRight_toLeftOf="@+id/txtsadara"
+        app:layout_constraintLeft_toRightOf="@+id/txtboruto"
+        />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/sarada"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtsakura"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/mitsuki">
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/sarada"
+            />
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/txtsadara"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sadara"
+        android:textSize="20sp"
+        android:textColor="#000"
+        app:layout_constraintTop_toBottomOf="@+id/sarada"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/txtmitsuki"/>
+    <TextView
+        android:id="@+id/mission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mission"
+        android:textSize="40sp"
+        android:textColor="#000"
+        android:paddingTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtmitsuki"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:text="The Happy Prince is one of the best stories written in English Literature written by Oscar Wilde. The story shows how the elites of that kingdom neglect the poor. And the statue of the Happy Prince takes help of a Swallow to help the poor of the city. One by one, the Prince starts losing his precious stones, rubies, and gold leaves when the Swallow starts plucking them give to the poor that the Prince can see from his high pedestal. The dramatic irony of the story reaches the climax when the city mayor sees the dead bird and the ugly broken statue. When the statue is sent to a furnace, God invites the Prince and the Swallow to live in the City of Gold in heaven."
+        app:layout_constraintTop_toBottomOf="@+id/mission"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:padding="10dp"
+        android:textAlignment="center"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
